# covafillr

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS  README.Rmd  README.md  appveyor.yml  cleanup  configure  configure.ac  configure.win
covafillr/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS  configure  configure.ac
covafillr/R/: RcppPlugin.R  covafill.R  covatree.R  kde.R  loadJAGSModule.R  statcovafill.R  utils.R  zzz.R.in
covafillr/inst/examples/JAGS/: covafill.jags
covafillr/inst/examples/ggplot/: ggplotexample.R
covafillr/inst/examples/interpolate/: interpolate.R  interpolate.cpp
covafillr/inst/examples/rcode/: rtest.R
covafillr/inst/examples/ssmtest/: ssmtest.R
covafillr/inst/examples/ssmtestTree/: ssmtestTree.cpp
covafillr/inst/examples/tmbtest/: tmbtest.R
covafillr/inst/examples/tmbtestTree/: tmbtestTree.cpp
covafillr/inst/include/covafill/: Interpolate  JAGS  STAN  TMB
covafillr/inst/include/covafill/dox/: Doxyfile
covafillr/inst/include/covafill/dox/html/: annotated.html  atomic_8hpp_source.html  atomic__Tree_8hpp_source.html  bicubicInterpolation_8hpp_source.html  classatomicEvalFill-members.html  classatomicEvalFill.html  classatomicEvalFill__coll__graph.map  classatomicEvalFill__coll__graph.md5  classatomicEvalTree-members.html  classatomicEvalTree.html  classatomicEvalTree__coll__graph.md5  classatomicEvalTree__inherit__graph.map  classbicubicInterpolation-members.html  classbicubicInterpolation.html  classbicubicInterpolation__coll__graph.map  classbicubicInterpolation__coll__graph.md5  classcovafill-members.html  classcovafill.html  classcovanode-members.html  classcovanode.html  classcovatree-members.html  classcovatree.html  classcubicInterpolation-members.html  classcubicInterpolation.html  classes.html  classjags_1_1covafillJAGS_1_1covafillJAGS-members.html  classjags_1_1covafillJAGS_1_1covafillJAGS.html  classjags_1_1covafillJAGS_1_1covafillJAGS__inherit__graph.map  classjags_1_1covafillJAGS_1_1covafillJAGS__inherit__graph.md5  classjags_1_1covafillJAGS_1_1covafillModule-members.html  classjags_1_1covafillJAGS_1_1covafillModule.html  classjags_1_1covafillJAGS_1_1covafillModule__inherit__graph.map  classjags_1_1covafillJAGS_1_1covafillModule__inherit__graph.md5  classncubicInterpolation-members.html  classncubicInterpolation.html  classncubicInterpolation__inherit__graph.map  classncubicInterpolation__inherit__graph.md5  classtricubicInterpolation-members.html  classtricubicInterpolation.html  classtricubicInterpolation__inherit__graph.map  (+81 more)
covafillr/inst/include/covafill/dox/latex/: annotated.tex  classatomicEvalFill.tex  classatomicEvalFill__inherit__graph.md5  classatomicEvalTree.tex  classatomicEvalTree__coll__graph.md5  classbicubicInterpolation.tex  classbicubicInterpolation__coll__graph.md5  classcovafill.tex  classcovanode.tex  classcovatree.tex  classcubicInterpolation.tex  classjags_1_1covafillJAGS_1_1covafillJAGS.tex  classjags_1_1covafillJAGS_1_1covafillJAGS__coll__graph.md5  classjags_1_1covafillJAGS_1_1covafillModule.tex  classjags_1_1covafillJAGS_1_1covafillModule__inherit__graph.md5  classncubicInterpolation.tex  classncubicInterpolation__inherit__graph.md5  classtricubicInterpolation.tex  classtricubicInterpolation__inherit__graph.md5  classunicubicInterpolation.tex  classunicubicInterpolation__coll__graph.md5  dir_444de096c71e35dbd129afb39e56cbea.tex  dir_444de096c71e35dbd129afb39e56cbea_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_80edc11a1bc5b03fe95d39befcd2b377.tex  group__Core.tex  (+25 more)
covafillr/man/: covafill-class.Rd  covatree-class.Rd  kde.Rd  stat_covafill.Rd  suggestBandwith.Rd
covafillr/src/: main.cpp
covafillr/src/headers/: fill.hpp  tree.hpp
covafillr/src/utils/: convert.hpp
(+123 files in other folders)
